# scloop

./: .dir-locals.el  .gitignore  .gitmodules  MANIFEST.in  Makefile  README.md  flake.nix  mise.toml  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml  test-build.yml  test-import.yml
src/scloop/: __init__.py
src/scloop/analyzing/: bootstrap.py  hodge.py  stats.py
src/scloop/benchmarking/: __init__.py  datasets.py  hf_registry.yaml  install_r_packages.R
src/scloop/computing/: __init__.py  divergence.py  embedding.py  hodge.py  hodge_decomposition.py  homology.py  loops.py  matching.py  utils.py
src/scloop/data/: __init__.py  analysis_containers.py  base_components.py  boundary.py  constants.py  containers.py  loop_reconstruction.py  metadata.py  ripser.cpp  ripser.hpp  ripser.pxd  ripser.pyx  ripser_lib.cpp  ripser_lib.pyx  types.py  utils.py
src/scloop/data/ripser_lib/: ripser_lib.cpp  ripser_lib.pyx
src/scloop/io/: __init__.py
src/scloop/matching/: __init__.py  cross_dataset.py  data_modules.py  mlp.py  nf.py
src/scloop/plotting/: __init__.py  _cross_match.py  _hodge.py  _homology.py  _match.py  _trajectory.py  _utils.py  plot.py
src/scloop/preprocessing/: __init__.py  downsample.py  prepare.py  qc.py
src/scloop/preprocessing/delve/: __init__.py  delve.py  kh.py
src/scloop/tools/: __init__.py  _cross_match.py  _loops.py
src/scloop/utils/: __init__.py  logging.py  pvalues.py
src/scloop/utils/denoise/: Sanity.cpp  Sanity.pyx  Sanity_py.py  __init__.py
src/scloop/utils/distance_metrics/: __init__.py  frechet.cpp  frechet.pyx  frechet_py.py
src/scloop/utils/linear_algebra_gf2/: __init__.py  gf2toolkit_lib.cpp  gf2toolkit_lib.pyx  gf2toolkit_wrapper.cpp  gf2toolkit_wrapper.hpp  m4ri_lib.c  m4ri_lib.pyx
tests/: conftest.py  test_encoding.py  test_huggingface_benchmark.py  test_loops.py  test_smoothing.py
